--- a/dashboard/styles/purchase.css
+++ b/dashboard/styles/purchase.css
@@ -3233,7 +3233,7 @@ select{
 .truncate{
     overflow:hidden;
     text-overflow:ellipsis;
-    white-space:nowrap
+    /* white-space:nowrap */
 }
 .italic{
     font-style:italic
